issue#1054 - fix for turning Github box dark highlighted background in dark mode

--- a/sagan-client/src/css/dark.scss
+++ b/sagan-client/src/css/dark.scss
@@ -463,7 +463,7 @@ body.dark {
     color: $dark-background;
   }
 
-  .admonitionblock, &.guide main .right-pane-widget--container {
+  .admonitionblock, &#guide main .right-pane-widget--container {
     background: $dark-highlight-background;
   }
 
